@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-01T00:33:07Z",
+  "timestamp" : "2022-06-01T08:09:41Z",
   "count_outdated" : 1527,
   "uniques_outdated" : 405,
-  "count" : 1557,
-  "uniques" : 424,
+  "count" : 1558,
+  "uniques" : 425,
   "clones" : [
     {
       "timestamp": "2022-05-18T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 1, 5 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
+    },
+    {
+      "timestamp": "2022-06-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
