@@ -1,5 +1,5 @@
 {
-  "count": 30,
+  "count": 31,
   "uniques": 12,
   "clones": [
     {
@@ -46,6 +46,11 @@
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-06-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
